ANTLR/SPLParser.py
# Generated from SPL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SPLParser ( Parser ):

    grammarFileName = "SPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'glob'", "'{'", "'}'", "'proc'", "'func'", 
                     "'main'", "'('", "')'", "';'", "'return'", "'local'", 
                     "'var'", "'halt'", "'print'", "'='", "'while'", "'do'", 
                     "'until'", "'if'", "'else'", "'neg'", "'not'", "'eq'", 
                     "'>'", "'or'", "'and'", "'plus'", "'minus'", "'mult'", 
                     "'div'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "USER_DEFINED_NAME", 
                      "NUMBER", "STRING", "WS", "COMMENT" ]

    RULE_spl_prog = 0
    RULE_variables = 1
    RULE_var = 2
    RULE_name = 3
    RULE_procdefs = 4
    RULE_pdef = 5
    RULE_funcdefs = 6
    RULE_fdef = 7
    RULE_body = 8
    RULE_param = 9
    RULE_maxthree = 10
    RULE_mainprog = 11
    RULE_atom = 12
    RULE_algo = 13
    RULE_instr = 14
    RULE_assign = 15
    RULE_loop = 16
    RULE_branch = 17
    RULE_output = 18
    RULE_input = 19
    RULE_term = 20
    RULE_unop = 21
    RULE_binop = 22

    ruleNames =  [ "spl_prog", "variables", "var", "name", "procdefs", "pdef", 
                   "funcdefs", "fdef", "body", "param", "maxthree", "mainprog", 
                   "atom", "algo", "instr", "assign", "loop", "branch", 
                   "output", "input", "term", "unop", "binop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    USER_DEFINED_NAME=31
    NUMBER=32
    STRING=33
    WS=34
    COMMENT=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Spl_progContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variables(self):
            return self.getTypedRuleContext(SPLParser.VariablesContext,0)


        def procdefs(self):
            return self.getTypedRuleContext(SPLParser.ProcdefsContext,0)


        def funcdefs(self):
            return self.getTypedRuleContext(SPLParser.FuncdefsContext,0)


        def mainprog(self):
            return self.getTypedRuleContext(SPLParser.MainprogContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_spl_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpl_prog" ):
                listener.enterSpl_prog(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpl_prog" ):
                listener.exitSpl_prog(self)




    def spl_prog(self):

        localctx = SPLParser.Spl_progContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_spl_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(SPLParser.T__0)
            self.state = 47
            self.match(SPLParser.T__1)
            self.state = 48
            self.variables()
            self.state = 49
            self.match(SPLParser.T__2)
            self.state = 50
            self.match(SPLParser.T__3)
            self.state = 51
            self.match(SPLParser.T__1)
            self.state = 52
            self.procdefs()
            self.state = 53
            self.match(SPLParser.T__2)
            self.state = 54
            self.match(SPLParser.T__4)
            self.state = 55
            self.match(SPLParser.T__1)
            self.state = 56
            self.funcdefs()
            self.state = 57
            self.match(SPLParser.T__2)
            self.state = 58
            self.match(SPLParser.T__5)
            self.state = 59
            self.match(SPLParser.T__1)
            self.state = 60
            self.mainprog()
            self.state = 61
            self.match(SPLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(SPLParser.VarContext,0)


        def variables(self):
            return self.getTypedRuleContext(SPLParser.VariablesContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_variables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariables" ):
                listener.enterVariables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariables" ):
                listener.exitVariables(self)




    def variables(self):

        localctx = SPLParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variables)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.var()
                self.state = 65
                self.variables()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USER_DEFINED_NAME(self):
            return self.getToken(SPLParser.USER_DEFINED_NAME, 0)

        def getRuleIndex(self):
            return SPLParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)




    def var(self):

        localctx = SPLParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(SPLParser.USER_DEFINED_NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USER_DEFINED_NAME(self):
            return self.getToken(SPLParser.USER_DEFINED_NAME, 0)

        def getRuleIndex(self):
            return SPLParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)




    def name(self):

        localctx = SPLParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(SPLParser.USER_DEFINED_NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcdefsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pdef(self):
            return self.getTypedRuleContext(SPLParser.PdefContext,0)


        def procdefs(self):
            return self.getTypedRuleContext(SPLParser.ProcdefsContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_procdefs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcdefs" ):
                listener.enterProcdefs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcdefs" ):
                listener.exitProcdefs(self)




    def procdefs(self):

        localctx = SPLParser.ProcdefsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_procdefs)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.pdef()
                self.state = 75
                self.procdefs()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(SPLParser.NameContext,0)


        def param(self):
            return self.getTypedRuleContext(SPLParser.ParamContext,0)


        def body(self):
            return self.getTypedRuleContext(SPLParser.BodyContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_pdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPdef" ):
                listener.enterPdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPdef" ):
                listener.exitPdef(self)




    def pdef(self):

        localctx = SPLParser.PdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_pdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.name()
            self.state = 80
            self.match(SPLParser.T__6)
            self.state = 81
            self.param()
            self.state = 82
            self.match(SPLParser.T__7)
            self.state = 83
            self.match(SPLParser.T__1)
            self.state = 84
            self.body()
            self.state = 85
            self.match(SPLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fdef(self):
            return self.getTypedRuleContext(SPLParser.FdefContext,0)


        def funcdefs(self):
            return self.getTypedRuleContext(SPLParser.FuncdefsContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_funcdefs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdefs" ):
                listener.enterFuncdefs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdefs" ):
                listener.exitFuncdefs(self)




    def funcdefs(self):

        localctx = SPLParser.FuncdefsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdefs)
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.fdef()
                self.state = 88
                self.funcdefs()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(SPLParser.NameContext,0)


        def param(self):
            return self.getTypedRuleContext(SPLParser.ParamContext,0)


        def body(self):
            return self.getTypedRuleContext(SPLParser.BodyContext,0)


        def atom(self):
            return self.getTypedRuleContext(SPLParser.AtomContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_fdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFdef" ):
                listener.enterFdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFdef" ):
                listener.exitFdef(self)




    def fdef(self):

        localctx = SPLParser.FdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.name()
            self.state = 94
            self.match(SPLParser.T__6)
            self.state = 95
            self.param()
            self.state = 96
            self.match(SPLParser.T__7)
            self.state = 97
            self.match(SPLParser.T__1)
            self.state = 98
            self.body()
            self.state = 99
            self.match(SPLParser.T__8)
            self.state = 100
            self.match(SPLParser.T__9)
            self.state = 101
            self.atom()
            self.state = 102
            self.match(SPLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def maxthree(self):
            return self.getTypedRuleContext(SPLParser.MaxthreeContext,0)


        def algo(self):
            return self.getTypedRuleContext(SPLParser.AlgoContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = SPLParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(SPLParser.T__10)
            self.state = 105
            self.match(SPLParser.T__1)
            self.state = 106
            self.maxthree()
            self.state = 107
            self.match(SPLParser.T__2)
            self.state = 108
            self.algo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def maxthree(self):
            return self.getTypedRuleContext(SPLParser.MaxthreeContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = SPLParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.maxthree()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MaxthreeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.VarContext)
            else:
                return self.getTypedRuleContext(SPLParser.VarContext,i)


        def getRuleIndex(self):
            return SPLParser.RULE_maxthree

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMaxthree" ):
                listener.enterMaxthree(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMaxthree" ):
                listener.exitMaxthree(self)




    def maxthree(self):

        localctx = SPLParser.MaxthreeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_maxthree)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.var()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.var()
                self.state = 115
                self.var()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 117
                self.var()
                self.state = 118
                self.var()
                self.state = 119
                self.var()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainprogContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variables(self):
            return self.getTypedRuleContext(SPLParser.VariablesContext,0)


        def algo(self):
            return self.getTypedRuleContext(SPLParser.AlgoContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_mainprog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainprog" ):
                listener.enterMainprog(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainprog" ):
                listener.exitMainprog(self)




    def mainprog(self):

        localctx = SPLParser.MainprogContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_mainprog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(SPLParser.T__11)
            self.state = 124
            self.match(SPLParser.T__1)
            self.state = 125
            self.variables()
            self.state = 126
            self.match(SPLParser.T__2)
            self.state = 127
            self.algo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(SPLParser.VarContext,0)


        def NUMBER(self):
            return self.getToken(SPLParser.NUMBER, 0)

        def getRuleIndex(self):
            return SPLParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)




    def atom(self):

        localctx = SPLParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_atom)
        try:
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.var()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.match(SPLParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlgoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instr(self):
            return self.getTypedRuleContext(SPLParser.InstrContext,0)


        def algo(self):
            return self.getTypedRuleContext(SPLParser.AlgoContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_algo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlgo" ):
                listener.enterAlgo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlgo" ):
                listener.exitAlgo(self)




    def algo(self):

        localctx = SPLParser.AlgoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_algo)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.instr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.instr()
                self.state = 135
                self.match(SPLParser.T__8)
                self.state = 136
                self.algo()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SPLParser.RULE_instr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CallInstrContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SPLParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def name(self):
            return self.getTypedRuleContext(SPLParser.NameContext,0)

        def input_(self):
            return self.getTypedRuleContext(SPLParser.InputContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallInstr" ):
                listener.enterCallInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallInstr" ):
                listener.exitCallInstr(self)


    class LoopInstrContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SPLParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def loop(self):
            return self.getTypedRuleContext(SPLParser.LoopContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopInstr" ):
                listener.enterLoopInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopInstr" ):
                listener.exitLoopInstr(self)


    class HaltInstrContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SPLParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHaltInstr" ):
                listener.enterHaltInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHaltInstr" ):
                listener.exitHaltInstr(self)


    class BranchInstrContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SPLParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def branch(self):
            return self.getTypedRuleContext(SPLParser.BranchContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBranchInstr" ):
                listener.enterBranchInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBranchInstr" ):
                listener.exitBranchInstr(self)


    class AssignInstrContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SPLParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assign(self):
            return self.getTypedRuleContext(SPLParser.AssignContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignInstr" ):
                listener.enterAssignInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignInstr" ):
                listener.exitAssignInstr(self)


    class PrintInstrContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SPLParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def output(self):
            return self.getTypedRuleContext(SPLParser.OutputContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintInstr" ):
                listener.enterPrintInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintInstr" ):
                listener.exitPrintInstr(self)



    def instr(self):

        localctx = SPLParser.InstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_instr)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = SPLParser.HaltInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(SPLParser.T__12)
                pass

            elif la_ == 2:
                localctx = SPLParser.PrintInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(SPLParser.T__13)
                self.state = 142
                self.output()
                pass

            elif la_ == 3:
                localctx = SPLParser.CallInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.name()
                self.state = 144
                self.match(SPLParser.T__6)
                self.state = 145
                self.input_()
                self.state = 146
                self.match(SPLParser.T__7)
                pass

            elif la_ == 4:
                localctx = SPLParser.AssignInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 148
                self.assign()
                pass

            elif la_ == 5:
                localctx = SPLParser.LoopInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 149
                self.loop()
                pass

            elif la_ == 6:
                localctx = SPLParser.BranchInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 150
                self.branch()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SPLParser.RULE_assign

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TermAssignContext(AssignContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SPLParser.AssignContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var(self):
            return self.getTypedRuleContext(SPLParser.VarContext,0)

        def term(self):
            return self.getTypedRuleContext(SPLParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermAssign" ):
                listener.enterTermAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermAssign" ):
                listener.exitTermAssign(self)


    class FunctionCallAssignContext(AssignContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SPLParser.AssignContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var(self):
            return self.getTypedRuleContext(SPLParser.VarContext,0)

        def name(self):
            return self.getTypedRuleContext(SPLParser.NameContext,0)

        def input_(self):
            return self.getTypedRuleContext(SPLParser.InputContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCallAssign" ):
                listener.enterFunctionCallAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCallAssign" ):
                listener.exitFunctionCallAssign(self)



    def assign(self):
